--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contenido">
-        <h1>JavaScript Moderno - 2022</h1>
+        <h1>JavaScript - 2022</h1>
         <p>Introducción</p>
         <p class="hashtag">#JSModernoConCumbi</p>
     </div>
