init curso funciones javascript

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenido">
         <h1>JavaScript - 2022</h1>
-        <p>Introducción</p>
+        <p>FUNCIONES</p>
         <p class="hashtag">#JSModernoConCumbi</p>
     </div>
 
